--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "netlify-plugin-redirects",
+  "name": "@helloample/netlify-plugin-redirects",
   "version": "1.0.0",
-  "description": "",
+  "description": "Read a CSV file, parse the rows and write them to `_redirects` _before_ Netlify processes your build.",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
     "test:watch": "mocha -w"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "netlify",
+    "netlify-plugin"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ample/netlify-plugin-redirects"
+  },
+  "bugs": {
+    "url": "https://github.com/ample/netlify-plugin-redirects/issues"
+  },
+  "author": "https://github.com/tcmacdonald",
+  "license": "MIT",
   "dependencies": {
     "csvtojson": "^2.0.10",
     "current-git-branch": "^1.1.0"
