--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "current-git-branch": "^1.1.0"
   },
   "devDependencies": {
-    "mocha": "^8.0.1"
+    "mocha": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=8.3.0"
   }
 }
